Fixed section spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  min-height: 100vh;
-}
-
 body, html {
   font-family: 'Roboto';
 }
@@ -22,6 +18,10 @@ body, html {
   margin: 0 auto;
 }
 
+.full-height {
+  height: 100vh;
+}
+
 .title {
   text-align: center;
   font-weight: bold;
@@ -30,8 +30,8 @@ body, html {
 @keyframes scroll_2 {
   0%   { transform: translateY(0); opacity: 1; }
   25%  { opacity: 1; }
-  75%  { transform: translateY(.75em); opacity: 0; }
-  100% { transform: translateY(0); opacity: 0; }
+  /* 75%  { transform: translateY(.75em); opacity: 0.5; } */
+  100% { transform: translateY(1em); opacity: 0; }
 }
 
 .scroll-icon__dot {
